docs/tests/parser/types/invalid/TypeMatrixRowFloat.b
fn void test() {
    let mat<3.0,3> m;
}
